:zap: feat: add filtering and listing methods for assets and brokers