@@ -2,17 +2,17 @@ package br.com.murilocb123.portflow.controller;
 
 import br.com.murilocb123.portflow.domain.entities.BrokerEntity;
 import br.com.murilocb123.portflow.dto.BrokerDTO;
-import br.com.murilocb123.portflow.service.BrokerService;
+import br.com.murilocb123.portflow.dto.BrokerFilterDTO;
 import br.com.murilocb123.portflow.mapper.BrokerMapper;
+import br.com.murilocb123.portflow.service.BrokerService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/broker")
@@ -45,9 +45,14 @@ public class BrokerController {
     }
 
     @GetMapping
-    public Page<BrokerDTO> list(Pageable pageable) {
-        Page<BrokerEntity> page = brokerService.list(pageable);
-        List<BrokerDTO> dtos = page.getContent().stream().map(BrokerMapper::toDTO).collect(Collectors.toList());
+    public Page<BrokerDTO> list(Pageable pageable, BrokerFilterDTO filter) {
+        Page<BrokerEntity> page = brokerService.list(pageable, filter);
+        List<BrokerDTO> dtos = page.getContent().stream().map(BrokerMapper::toDTO).toList();
         return new PageImpl<>(dtos, pageable, page.getTotalElements());
+    }
+
+    @GetMapping("/all")
+    public List<BrokerDTO> listAll() {
+        return brokerService.listAll().stream().map(BrokerMapper::toDTO).toList();
     }
 }
